# arrie

./: .gitignore  Cargo.toml  README.md
assets/: 3-side-diagonal.glb  gta2_block_model.glb
assets/shaders/: extended_material.wgsl
src/: camera.rs  dev_tools.rs  lib.rs  light.rs  main.rs  window.rs
src/map/: block.rs  file.rs  loader.rs  map_box.rs  mod.rs
src/map/block/: face.rs
src/style/: loader.rs  mod.rs  tile.rs
