[package]
name = "gta2_viewer"
version = "0.1.0"
authors = ["Hendrik Kunert <hendrik.kunert@henku.de>"]
edition = "2021"

[dependencies]
bevy = "0.15.1" 
bevy_panorbit_camera = "0.21.2"

futures-lite = "2.0.1"

wgpu = { version = "23.0.1", default-features = false }
thiserror = "2.0"
byteorder = "1"

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["image"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


